--- a/estilo/style.css
+++ b/estilo/style.css
@@ -13,9 +13,10 @@
     padding: 40px 0;
 }
 
-.cabecalho .box-cabecalho .texto{
-    max-width: 370px;
-    padding: 20px;
+.cabecalho .box-cabecalho .texto,
+.cabecalho .box-cabecalho .imagem{
+    flex: 0 1 400px;
+    margin: 20px;
 }
 
 .cabecalho .box-cabecalho .texto h1{
@@ -34,9 +35,9 @@
     margin-bottom: 25px;
 }
 
-.cabecalho .box-cabecalho .imagem{
+/* .cabecalho .box-cabecalho .imagem{
     width: 550px;
-}
+} */
 
 .cabecalho .box-cabecalho .imagem img{
     width: 100%;
@@ -72,7 +73,7 @@
     flex-wrap: wrap;
     max-width: 1440px;
     margin: 0 auto;
-    padding: 150px 0;
+    padding: 120px 0;
 }
 
 .box-cards .box{
@@ -148,7 +149,6 @@
 }
 
 .robape form{
-    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -161,7 +161,7 @@
 
 .robape form input{
     width: 100%;
-    height: 45px;
+    padding: 1rem 0;
     margin: 10px 0;
     border-radius: 5px;
     padding-left: 10px;
@@ -193,14 +193,14 @@
 }
 
 .direitos{
-    height: 50px;
     text-align: center;
-    line-height: 50px;
     color: var(--cor-escura);
     font-family: var(--fonte-Merriweather);
     font-size: 20px;
     background: var(--cor-azul);
     color: #fff;
+    padding: 1rem 0;
+    margin-top: 2rem;
 }
 
 
